--- a/NOC.html
+++ b/NOC.html
@@ -60,7 +60,7 @@
                         <div class="row">
                             <p class="title1"><font style="color:blue" >Ref. No.</font>  {{credentialSubject.refNo}}</p>
                             <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/dlogoc.jpg" alt="upsmf logo images"></div>
-                            <p class="title2">Date: {{credentialSubject.dated}}</p>
+                            <p class="title2">Date: {{credentialSubject.nurseRegDate}}</p>
                         </div>
                     </div>
                 </header>
@@ -98,12 +98,12 @@
                                 <span class="d-block">Dear Sir/Madam,</span><br>
                                 <p class="c-block">It is certified that after having verified of all the documents of BDS qualification of
                                    <u><b>{{credentialSubject.name}}</b></u>  who has been registered under part-A with U.P. State Dental
-                                    Council as per provision of the Dentists Act, 1948, on <b>{{credentialSubject.dated}}</b> with registration No.<b> {{credentialSubject.regNumber}}.</b>
+                                    Council as per provision of the Dentists Act, 1948, on <b>{{credentialSubject.nurseRegDate}}</b> with registration No.<b> {{credentialSubject.regNumber}}.</b>
                                     The applicant dentist possesses the recognized dental qualification and eligible for registration or
                                     to continue her/his registration under the relevent provision of the Dentists Act.</p><br>
-                                    <p class="c-block">She/he vide her/his application dated <b>{{credentialSubject.dated}}</b> requested for transfer of her/his registration
+                                    <p class="c-block">She/he vide her/his application dated <b>{{credentialSubject.nurseRegDate}}</b> requested for transfer of her/his registration
                                         from U.P. State Dental Council to <b>{{credentialSubject.council}}</b> and for the said
-                                        purpose She/he surrendered the Original Registration Certificate on <b>{{credentialSubject.dated}}</b> issued by this
+                                        purpose She/he surrendered the Original Registration Certificate on <b>{{credentialSubject.nurseRegDate}}</b> issued by this
                                         Council. Therefore, U.P. State Dental Council has no objection for her/his transfer from U.P.
                                         State Council to <b>{{credentialSubject.council}}</b> as per u/s 46A of the Dentists Act.</p><br>
                                         <p class="c-block">No disciplinary proceedings are pending or contemplated against him/her. There is no
