--- a/NPCC-r.html
+++ b/NPCC-r.html
@@ -65,7 +65,7 @@
                         <div class="en-details">
                             <div class="annot">
                                 <p ><span style="color: #2020a7;">I hereby certify that</span> <font style='font-weight: 1000;'><u>{{credentialSubject.name}}</u></font>
-                                    D/O <font style='font-weight: 1000;'><u>{{credentialSubject.mothersName}} & {{credentialSubject.fathersName}} R/o{{credentialSubject.address}}</font style></u> <span style="color: #2020a7;">is registered vide bearing Registration No.</span> {{credentialSubject.regNumber}}<font style="font-weight: 1000;"><span style="color: #2020a7;">Dated:</span>{{credentialSubject.dated}}</font> <span style="color: #2020a7;">under Part III-A of the GENERAL NURSING & MIDWIFERY Register under the U.P.
+                                    D/O <font style='font-weight: 1000;'><u>{{credentialSubject.mothersName}} & {{credentialSubject.fathersName}} R/o{{credentialSubject.address}}</font style></u> <span style="color: #2020a7;">is registered vide bearing Registration No.</span> {{credentialSubject.regNumber}}<font style="font-weight: 1000;"><span style="color: #2020a7;">Dated:</span>{{credentialSubject.nurseRegDate}}</font> <span style="color: #2020a7;">under Part III-A of the GENERAL NURSING & MIDWIFERY Register under the U.P.
 Nurses, Midwives, Asstt. Midwives and Health Visitor's Registration Act 1934.
 She has obtained the following Additional Qualification:</span>
                                 </p>
@@ -76,7 +76,7 @@ She has obtained the following Additional Qualification:</span>
                             <div class="subject number">
                                 <p class="title">Training Center.</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">University</p>
