--- a/PRO.html
+++ b/PRO.html
@@ -68,7 +68,7 @@
 						<div class="row1">
                             <div class="number">
                                 <p class="title2">Dated :</p>
-                                <p> {{credentialSubject.dated}}</p>
+                                <p> {{credentialSubject.nurseRegDate}}</p>
                             </div>
 							
 						</div>
@@ -117,7 +117,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
-                                <p class="result">{{credentialSubject.dated}} Lucknow</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}} Lucknow</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Address</p>
