--- a/degree-WC.html
+++ b/degree-WC.html
@@ -110,7 +110,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Dated</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Fee Receipt No</p>
