--- a/registration-certificate-nursing-WC.html
+++ b/registration-certificate-nursing-WC.html
@@ -88,7 +88,7 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Training Period</p>
@@ -110,7 +110,7 @@
                             <div class="subject pass year">
                                 <p class="title"> Date of Birth</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dob}}</p>
+                                <p class="result">{{credentialSubject.dateOfBirth}}</p>
                             </div>                                                      
                             <div class="s-division">
                                 <div class="row">
@@ -122,7 +122,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Dated</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>
                                 </div>
                                 <div class="row1">
