--- a/registration-certificate.html
+++ b/registration-certificate.html
@@ -87,7 +87,7 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Year of Passing</p>
@@ -104,7 +104,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Dated</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>
                                 </div>
                                 <div class="row1">
