--- a/Foreign-certificate-upnc-WC.html
+++ b/Foreign-certificate-upnc-WC.html
@@ -63,7 +63,7 @@
                                     <p class="title1">Ref. No : {{credentialSubject.refNo}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">Date: {{credentialSubject.dated}}</p>
+                                <p class="title2">Date: {{credentialSubject.nurseRegDate}}</p>
                             </div>
                             
                     </div>
