--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -62,7 +62,7 @@
                                     <p class="title1">Ref. No : {{credentialSubject.refNo}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">{{credentialSubject.dated}}</p>
+                                <p class="title2">{{credentialSubject.nurseRegDate}}</p>
                             </div>
                             
                     </div>
@@ -95,7 +95,7 @@
                             <div class="subject ">
                                 <p class="title">Training center</p>
                                 <p class="sep">:</p>
-                                <p class="result"><span class="d-block">{{credentialSubject.trainingCenter}}</span>
+                                <p class="result"><span class="d-block">{{credentialSubject.nursingCollage}}</span>
                                 </p>
                             </div>
                             <div class="subject ">
@@ -123,7 +123,7 @@
                         <div class="dateandno">
                             <div class="daterow">
                                 <h4>No: 4667</h4>
-                                <h4>Dated :{{credentialSubject.dated}}</h4>
+                                <h4>Dated :{{credentialSubject.nurseRegDate}}</h4>
                             </div>
                         </div>
                         <div class="para2">
