--- a/BABY-D.html
+++ b/BABY-D.html
@@ -66,7 +66,7 @@
                             <div class="annot">
                                 <p >This is to certify that <font style='font-weight: 1000;'><u>{{credentialSubject.name}}</u></font>
                                     D/O <u>{{credentialSubject.mothersName}} & {{credentialSubject.fathersName}}</u> has passed the examination of
-                                    {credentialSubject.courseName} held in the month of <u>{credentialSubject.resultDate} from the training centre <u>{{credentialSubject.trainingCenter}}</u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
+                                    {credentialSubject.courseName} held in the month of <u>{credentialSubject.resultDate} from the training centre <u>{{credentialSubject.nursingCollage}}</u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
                                 </p>
                             </div>
                             <p > Signed on behalf of the Governing Body of the U.P. State Medical Faculty</p>
@@ -90,7 +90,7 @@
                                 <div class="subject ">
                                     <p class="title">Date</p>
                                     <p class="sep">:</p>
-                                    <p class="result">{{credentialSubject.dated}}</p>
+                                    <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                 </div>
                             </div>
                             <div class="profile-scan">
