--- a/Foreign-certificate-upnc-WC.html
+++ b/Foreign-certificate-upnc-WC.html
@@ -80,7 +80,7 @@
                             </div>
                                                        <div class="para">
                                 <span class="d-block"> Sir/Madam,</span>
-                                <p class="c-block">Kindly refer to the request for verification of registration particular of <b><u>{{credentialSubject.name}}D/o {{credentialSubject.mothersName}},</u></b> This is certified that She has qualified General nursing and Midwifery and her name is registred as a General Nursing & Midwifery under registration number {{credentialSubject.regNumber}} dated{{credentialSubject.dated}}. Her registration is still inforce-</p>
+                                <p class="c-block">Kindly refer to the request for verification of registration particular of <b><u>{{credentialSubject.name}}D/o {{credentialSubject.mothersName}},</u></b> This is certified that She has qualified General nursing and Midwifery and her name is registred as a General Nursing & Midwifery under registration number {{credentialSubject.regNumber}} dated{{credentialSubject.nurseRegDate}}. Her registration is still inforce-</p>
                             </div>
                         </div>
                         <div class="f-division">
