--- a/GoodStanding-upnc-WC.html
+++ b/GoodStanding-upnc-WC.html
@@ -63,7 +63,7 @@
                                     <p class="title1">Ref. No : {{credentialSubject.refNo}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">Date: {{credentialSubject.dated}}</p>
+                                <p class="title2">Date: {{credentialSubject.nurseRegDate}}</p>
                             </div>
                             
                     </div>
@@ -87,7 +87,7 @@
                             <div class="subject ">
                                 <p class="title">Registration no</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.dated}}</p>
+                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.nurseRegDate}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training period</p>
@@ -97,7 +97,7 @@
                             <div class="subject ">
                                 <p class="title">Training center</p>
                                 <p class="sep">:</p>
-                                <p class="result"><span class="d-block">{{credentialSubject.trainingCenter}}</span>
+                                <p class="result"><span class="d-block">{{credentialSubject.nursingCollage}}</span>
                                     
                                 </p>
                             </div>
@@ -126,7 +126,7 @@
                         <div class="dateandno">
                             <div class="daterow">
                                 <h4>No: {{credentialSubject.finalYearRollNo}}</h4>
-                                <h4>Dated :{{credentialSubject.dated}}</h4>
+                                <h4>Dated :{{credentialSubject.nurseRegDate}}</h4>
                             </div>
                         </div>
                         <div class="para2">
