--- a/GoodStanding-upnc.html
+++ b/GoodStanding-upnc.html
@@ -86,7 +86,7 @@
                             <div class="subject ">
                                 <p class="title">Registration no</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.dated}}</p>
+                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.nurseRegDate}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training period</p>
@@ -96,7 +96,7 @@
                             <div class="subject ">
                                 <p class="title">Training center</p>
                                 <p class="sep">:</p>
-                                <p class="result"><span class="d-block">{{credentialSubject.trainingCenter}}</span>
+                                <p class="result"><span class="d-block">{{credentialSubject.nursingCollage}}</span>
                                     
                                 </p>
                             </div>
@@ -125,7 +125,7 @@
                         <div class="dateandno">
                             <div class="daterow">
                                 <h4>No: {{credentialSubject.finalYearRollNo}}</h4>
-                                <h4>Dated :{{credentialSubject.dated}}</h4>
+                                <h4>Dated :{{credentialSubject.nurseRegDate}}</h4>
                             </div>
                         </div>
                         <div class="para2">
