--- a/Diploma-corrected-WC.html
+++ b/Diploma-corrected-WC.html
@@ -100,7 +100,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Place</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.place}}</p>
+                                        <p class="result">Lucknow</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Dated</p>
