--- a/duplicate-r.html
+++ b/duplicate-r.html
@@ -116,7 +116,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Place</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.place}}</p>
+                                        <p class="result">Lucknow</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Dated</p>
