--- a/BDS_REG_STATE_WC.html
+++ b/BDS_REG_STATE_WC.html
@@ -118,7 +118,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
-                                <p class="result">{{credentialSubject.nurseRegDate}} & {{credentialSubject.place}}</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}} & Lucknow</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Address</p>
