--- a/NOC.html
+++ b/NOC.html
@@ -60,7 +60,7 @@
                         <div class="row">
                             <p class="title1"><font style="color:blue" >Ref. No.</font>  {{credentialSubject.refNo}}</p>
                             <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/dlogoc.jpg" alt="upsmf logo images"></div>
-                            <p class="title2">Date: {{credentialSubject.nurseRegDate}}</p>
+                            <p class="title1"><font style="color:blue" >Date:</font> {{credentialSubject.nurseRegDate}}</p>
                         </div>
                     </div>
                 </header>
