--- a/goodstanding.html
+++ b/goodstanding.html
@@ -70,7 +70,7 @@
                            <span>{{credentialSubject.name}}</span><br>
                            <span>{{credentialSubject.address}}</span><br>
                            <span><font style='color:#2020a7'>HAS PASSED BDS (BACHELOR OF DENTAL SURGERY)</font></span><br>
-                           <span>FROM {{credentialSubject.trainingCenter}}</span><br>
+                           <span>FROM {{credentialSubject.nursingCollage}}</span><br>
                            <span><font style='color:#2020a7'>BDS DEGREE HAE BEEN AWARDED BY</font></span><br>
                            <span>{{credentialSubject.university}} <font style='color:#2020a7'>{{credentialSubject.nursingCollage}} </font>Dr. PARUL SINGH HAS BEEN REGISTERED IN THIS COUNCIL.</span><br>
                            <span><font style='color:#2020a7'>UNDER DENTIST ACT 1948.(UNDER SECTION 32(2)/35(4)).</font></span><br>
