--- a/NOC-0001.html
+++ b/NOC-0001.html
@@ -103,7 +103,7 @@
                             </div>
                             <div class="para">
                                 <span class="d-block">Sir/Madam,</span><br>
-                                <p class="c-block">Kindly refer your letter no. {{credentialSubject.letterNo}} date {{credentialSubject.nurseRegDate}} It is to inform you that under mentioned candidates(s) has/have regidstered with this council & the registration is still in force.</p><br>
+                                <p class="c-block">Kindly refer your letter no. {{credentialSubject.certificateNumber}} date {{credentialSubject.nurseRegDate}} It is to inform you that under mentioned candidates(s) has/have regidstered with this council & the registration is still in force.</p><br>
                                     
                             </div>
                             <table>
@@ -118,7 +118,7 @@
                                     <td>1</td>
                                     <td><b>{{credentialSubject.regNumber}}</b><br>{{credentialSubject.nurseRegDate}}</td>
                                     <td><b>{{credentialSubject.name}}</b><br>{{credentialSubject.fathersName}}</td>
-                                    <td>{{credentialSubject.qualification}}<br></td>
+                                    <td>{{credentialSubject.courseName}}<br></td>
                                     <td>{{credentialSubject.nursingCollage}}<br></td>
                                 </tr>
                             </table>
