--- a/PRO.html
+++ b/PRO.html
@@ -101,7 +101,7 @@
                             </div>
                             <div class="subject address">
                                 <p class="title">Qualification</p>
-                                <p class="result">{{credentialSubject.qualification}}</p>
+                                <p class="result">{{credentialSubject.courseName}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
