--- a/MSC-r-UPNC-WC.html
+++ b/MSC-r-UPNC-WC.html
@@ -57,7 +57,7 @@
                         <h4 class="cer-type">{{credentialSubject.courseName}}</h4>
                         <div class="s-division">
                             <div class="row">
-                                    <p class="title1">No. {{credentialSubject.centerCode}}</p>
+                                    <p class="title1">No. {{credentialSubject.finalYearRollNo}}</p>
                             </div>
                             <div class="row">
                                 <p class="title2">Dated. {{credentialSubject.nurseRegDate}}</p>
