--- a/NPCC-r-WC.html
+++ b/NPCC-r-WC.html
@@ -57,10 +57,10 @@
                         <h4 class="cer-type">{{credentialSubject.courseName}}</h4>
                         <div class="s-division">
                             <div class="row">
-                                    <p class="title1">{{credentialSubject.centerCode}}</p>
+                                    <p class="title1">No. {{credentialSubject.finalYearRollNo}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">{{credentialSubject.finalYearRollNo}}</p>
+                                <p class="title2">Dated. {{credentialSubject.nurseRegDate}}</p>
                             </div>
                         </div>
                         <div class="en-details">
