--- a/DH-REG.html
+++ b/DH-REG.html
@@ -116,7 +116,7 @@
                                 <p class="result">{{credentialSubject.dateOfBirth}}</p>
                             </div>
                             <div class="subject passyear">
-                                <p class="title">Fee Recei[t No.</p>
+                                <p class="title">Fee Receipt No.</p>
                                 <p class="result">{{credentialSubject.feeReciptNo}}</p>
                             </div>
                             <div class="s-division">
