--- a/BABY-D-WC.html
+++ b/BABY-D-WC.html
@@ -49,10 +49,10 @@
                 <header>
 					<div class="s-division">
 						<div class="row">
-								<p class="title1">{{credentialSubject.centerCode}}</p>
+								<p class="title1">No. {{credentialSubject.finalYearRollNo}}</p>
 						</div>
 						<div class="row">
-							<p class="title2">{{credentialSubject.finalYearRollNo}}</p>
+							<p class="title2">Dated. {{credentialSubject.nurseRegDate}}</p>
 						</div>
 					</div>
                     
@@ -67,7 +67,7 @@
                             <div class="annot">
                                 <p >This is to certify that <font style='font-weight: 1000;'><u>{{credentialSubject.name}}</u></font>
                                     D/O <font style='font-weight: 1000;'><u>{{credentialSubject.mothersName}} & {{credentialSubject.fathersName}}</font style></u> has passed the examination of
-                                    <font style="font-weight: 1000;">{{credentialSubject.courseName}}</font> held in the month of <font <font style='font-weight: 1000;''><u>{{credentialSubject.resultDate}}</font></u> from the training centre <font <font style='font-weight: 1000;'><u>{{credentialSubject.trainingCenter}}]</font style></u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
+                                    <font style="font-weight: 1000;">{{credentialSubject.courseName}}</font> held in the month of <font <font style='font-weight: 1000;''><u>{{credentialSubject.nurseRegDate}}</font></u> from the training centre <font <font style='font-weight: 1000;'><u>{{credentialSubject.nursingCollage}}]</font style></u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
                                 </p>
                             </div>
                             <p > Signed on behalf of the Governing Body of the U.P. State Medical Faculty</p>
