--- a/BABY-D.html
+++ b/BABY-D.html
@@ -48,10 +48,10 @@
                 <header>
 					<div class="s-division">
 						<div class="row">
-								<p class="title1">{credentialSubject.centerCode}</p>
+								<p class="title1">No. {{credentialSubject.finalYearRollNo}}</p>
 						</div>
 						<div class="row">
-							<p class="title2">{credentialSubject.finalYearRollNo}</p>
+							<p class="title2">Dated. {{credentialSubject.nurseRegDate}}</p>
 						</div>
 					</div>
                     
