--- a/BABY-D.html
+++ b/BABY-D.html
@@ -23,7 +23,7 @@
             display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1.5;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem}
             p{font-size:.875rem}hr{border:none;background-color:rgba(0,0,0,.15);height:1px;margin:10px 0}header h3{margin-top:5px}.mainSection 
             .en-details{width:100%;margin:1.2rem auto 0}.mainSection .cer-name{text-align:center;font-size:20px;color:#ec1f07;margin:1rem 0 0}
-            .law .act,.mainSection .cer-type{text-transform:uppercase;margin:0}.mainSection .cer-type{font-size:28px;color:#2020a7}
+            .law .act,.mainSection .cer-type{text-transform:uppercase;margin:0}.mainSection .cer-type{font-size:28px;color:#2020a7;margin-right: 15%;}
             .law .act,.org-section span{font-size:11px;font-family:Calibri;font-weight:700}.mainSection .en-details p{font-style: italic    ;}.annot p{word-spacing: 8px;line-height: 30pt;text-align: justify;text-indent: 100px;font-style: italic;}
              .subject{display:flex;margin-bottom:2px}.subject p{margin:0 0 5px;}.subject .title{width:2rem;font-weight: bold;}.subject 
              .sep{width:1rem}.subject .result{font-family:Calibri;flex:0 0 62%}footer{left:0;right:0}
