--- a/MDS-REG.html
+++ b/MDS-REG.html
@@ -58,7 +58,7 @@
                         <div class="s-division">
                             <div class="row">
                                     <p class="title1"> No </p>
-                                    <P>: {{credentialSubject.certificateNo}}</P>
+                                    <P>: {{credentialSubject.finalYearRollNo}}</P>
                             </div>
                             <div class="row">
                                 <p class="title1">Dated </p>
