--- a/MDS-REG-WC.html
+++ b/MDS-REG-WC.html
@@ -59,7 +59,7 @@
                         <div class="s-division">
                             <div class="row">
                                     <p class="title1"> No </p>
-                                    <P>: {{credentialSubject.certificateNo}}</P>
+                                    <P>: {{credentialSubject.finalYearRollNo}}</P>
                             </div>
                             <div class="row">
                                 <p class="title1">Dated </p>
