--- a/NOC.html
+++ b/NOC.html
@@ -102,10 +102,10 @@
                                     The applicant dentist possesses the recognized dental qualification and eligible for registration or
                                     to continue her/his registration under the relevent provision of the Dentists Act.</p><br>
                                     <p class="c-block">She/he vide her/his application dated <b>{{credentialSubject.nurseRegDate}}</b> requested for transfer of her/his registration
-                                        from U.P. State Dental Council to <b>{{credentialSubject.council}}</b> and for the said
+                                        from U.P. State Dental Council to <b>{{credentialSubject.courseCouncil}}</b> and for the said
                                         purpose She/he surrendered the Original Registration Certificate on <b>{{credentialSubject.nurseRegDate}}</b> issued by this
                                         Council. Therefore, U.P. State Dental Council has no objection for her/his transfer from U.P.
-                                        State Council to <b>{{credentialSubject.council}}</b> as per u/s 46A of the Dentists Act.</p><br>
+                                        State Council to <b>{{credentialSubject.courseCouncil}}</b> as per u/s 46A of the Dentists Act.</p><br>
                                         <p class="c-block">No disciplinary proceedings are pending or contemplated against him/her. There is no
                                             due/recovery is pending from him/her.</p><br>
                                         <p class="c-block"><b>This NOC is valid only for 6 months from the date of issuing by U.P. State Dental
