--- a/MBBS-permanent-WC.html
+++ b/MBBS-permanent-WC.html
@@ -127,7 +127,7 @@
                                 <p class="result">{{credentialSubject.nurseRegDate}}, Lucknow(U.P)</p>
                             </div>
                             <div >
-                                <p><font style="color:blue">Schedule of the Indian Medical Council Act, 1956</font><b>{{credentialSubject.schedule}}</b></p>
+                                <p><font style="color:blue">Schedule of the Indian Medical Council Act, 1956</font><b>Schedule 1</b></p>
                                 <p><font style="color:blue">Undergone rotatory training from</font> {{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} <font style="color:blue">to</font> {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}} <font style="color:blue">at</font>{{credentialSubject.nursingCollage}}</p>
                             </div>
                             
