--- a/DH-REG.html
+++ b/DH-REG.html
@@ -57,7 +57,7 @@
 						<div class="row">
                             <div class="number">
                                 <p class="title1">Certificate No :</p>
-                                <p> {{credentialSubject.certificateNo}}</p>
+                                <p> {{credentialSubject.certificateNumber}}</p>
                             </div>
 								
 						</div>
