--- a/name-change-wc.html
+++ b/name-change-wc.html
@@ -127,7 +127,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Name change after Matrimony issued on</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.nurseRegDatedated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>                                    
                                 </div>
                                 <div class="row1">
