--- a/goodstanding.html
+++ b/goodstanding.html
@@ -55,9 +55,9 @@
 								<p class="title1">Ref No </p>
                                 <P>: {{credentialSubject.refNo}}</P>
 						</div>
-                        <div class="top-logo"><img src="images/dlogoc.jpg" alt="upsmf logo images"></div>
+                        <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/dlogoc.jpg" alt="upsmf logo images"></div>
 						<div class="row2">
-							<p class="title2">Dated : {{credentialSubject.dated}}</p>
+							<p class="title2">Dated : {{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}}</p>
 						</div>
 					</div>
                    
