--- a/goodstanding_WC.html
+++ b/goodstanding_WC.html
@@ -58,7 +58,7 @@
 						</div>
                         <div class="top-logo"><img src="images/dlogoc.jpg" alt="upsmf logo images"></div>
 						<div class="row2">
-							<p class="title2">Dated : {{credentialSubject.dated}}</p>
+							<p class="title2">Dated : {{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}}</p>
 						</div>
 					</div>
                    
