--- a/GOODSTANDING2_WC.html
+++ b/GOODSTANDING2_WC.html
@@ -65,7 +65,7 @@
                         <div class="row">
                             <p class="title1"><font style="color:rgb(74, 163, 226)" >Ref. No:</font> {{credentialSubject.refNo}}</p>
                             <div class="top-logo"><img src="images/mclogoc.jpg" alt="upsmf logo images"></div>
-                            <p class="title1"><font style="color:rgb(74, 163, 226)" >Date: </font>{{credentialSubject.nurseRegDate}}</p>
+                            <p class="title1"><font style="color:rgb(74, 163, 226)" >Date: </font>{{credentialSubject.courseDate}}</p>
                         </div>
                     </div>
                 </header>
@@ -83,7 +83,7 @@
                             
                             <div class="para">
                                 <p class="c-block">This is to certify that {{credentialSubject.name}} D/O {{credentialSubject.fathersName}} is registered with
-                                    Uttar Pradesh Medical Council. She was registered as M.B.B.S on {{credentialSubject.nurseRegDate}} & her
+                                    Uttar Pradesh Medical Council. She was registered as M.B.B.S on {{credentialSubject.joiningDate}} & her
                                     Registration No. is {{credentialSubject.regNumber}} with{{credentialSubject.courseName}} ( {{credentialSubject.university}} ). Her registration is still
                                     in force.</p><br>
                                     <p class="c-block">There is nothing adverse known against her and she commands a good standing in
