--- a/GoodStanding-upnc-WC.html
+++ b/GoodStanding-upnc-WC.html
@@ -63,7 +63,7 @@
                                     <p class="title1">Ref. No : {{credentialSubject.refNo}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">Date: {{credentialSubject.nurseRegDate}}</p>
+                                <p class="title2">Date: {{credentialSubject.courseDate}}</p>
                             </div>
                             
                     </div>
@@ -87,12 +87,12 @@
                             <div class="subject ">
                                 <p class="title">Registration no</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.nurseRegDate}}</p>
+                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.joiningDate}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training period</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} To {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}}</p>
+                                <p class="result">{{credentialSubject.joiningDate}} To {{credentialSubject.courseDate}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training center</p>
@@ -126,7 +126,7 @@
                         <div class="dateandno">
                             <div class="daterow">
                                 <h4>No: {{credentialSubject.finalYearRollNo}}</h4>
-                                <h4>Dated :{{credentialSubject.nurseRegDate}}</h4>
+                                <h4>Dated :{{credentialSubject.courseDate}}</h4>
                             </div>
                         </div>
                         <div class="para2">
