--- a/GoodStanding-upnc.html
+++ b/GoodStanding-upnc.html
@@ -15,7 +15,7 @@
        font-weight:400;font-style:normal}@font-face{font-family:Calibri;src:url(https://fonts.gstatic.com/l/font?kit=J7aanpV-BGlaFfdAjAo9_pxqHxIZrCE&skey=cd2dd6afe6bf0eb2&v=v15) format('woff2');
        font-weight:700;font-style:normal}*,::after,::before{box-sizing:border-box}
        html{font-size:16px}body{color:#0e0e10;font-family:Calibri;font-weight:400}img{max-width:100%}.mt-0{margin-top:0}.mt-5{margin-top:.3125rem}.mt-10{margin-top:10px}.mt-16{margin-top:1rem}
-       .mb-5{margin-bottom:.3125rem}.mb-10{margin-bottom:.625rem}.mb-15{margin-bottom:.9375rem}.ft-8{font-size:.5rem}.alpha-5{opacity:.5}
+       .mb-5{margin-bottom:.3125rem}.mb-10{margin-bottom:.625rem}.mb-15{margin-bottom:.9375rfem}.ft-8{font-size:.5rem}.alpha-5{opacity:.5}
        .small{font-size:.625rem;line-height:.75rem;color: red;}.opt-8{opacity:80%}.text-right{text-align:right}.mainSection .cer-type,.text-center,header h3,header
         p{text-align:center}.secondaryColor{color:#2020a7}.cc-container{position:relative;z-index:1}.bg-upsmf,
         footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;top:58%;width:321px;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
@@ -62,7 +62,7 @@
                                     <p class="title1">Ref. No : {{credentialSubject.refNo}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">Date: {{credentialSubject.nurseRegDate}}</p>
+                                <p class="title2">Date: {{credentialSubject.courseDate}}</p>
                             </div>
                             
                     </div>
@@ -86,12 +86,12 @@
                             <div class="subject ">
                                 <p class="title">Registration no</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.nurseRegDate}}</p>
+                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.joiningDate}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training period</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} To {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}}</p>
+                                <p class="result">{{credentialSubject.joiningDate}} To {{credentialSubject.courseDate}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training center</p>
@@ -125,7 +125,7 @@
                         <div class="dateandno">
                             <div class="daterow">
                                 <h4>No: {{credentialSubject.finalYearRollNo}}</h4>
-                                <h4>Dated :{{credentialSubject.nurseRegDate}}</h4>
+                                <h4>Dated :{{credentialSubject.courseDate}}</h4>
                             </div>
                         </div>
                         <div class="para2">
