--- a/goodstanding_WC.html
+++ b/goodstanding_WC.html
@@ -56,7 +56,7 @@
 								<p class="title1">Ref No </p>
                                 <P>: {{credentialSubject.refNo}}</P>
 						</div>
-                        <div class="top-logo"><img src="images/dlogoc.jpg" alt="upsmf logo images"></div>
+                        <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/dlogoc.jpg" alt="upsmf logo images"></div>
 						<div class="row2">
 							<p class="title2">Dated : {{credentialSubject.joiningDate}}-{{credentialSubject.courseDate}}</p>
 						</div>
