--- a/GOODSTANDING2_WC.html
+++ b/GOODSTANDING2_WC.html
@@ -19,7 +19,7 @@
        .small{font-size:.625rem;line-height:.75rem;color: red;}.opt-8{opacity:80%}.text-right{text-align:right}.mainSection .cer-type,.text-center,header h3,header
         p{text-align:center}.secondaryColor{color:#2020a7}.cc-container{position:relative;z-index:1}.bg-upsmf,
         footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;top:58%;width:321px;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
-        .en-certificate{width:630px;height:883px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;
+        .en-certificate{width:725px;height:883px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;
             display:flex}.h1,h1,h2,h3,h4,h5,h6{font-family:Calibri;font-weight:700;margin-bottom:10px;    margin-top: 1px;}.h3,h3{font-size:1.5rem}
             p{font-size:16px}hr{border:none;background-color:rgba(0,0,0,.15);height:1px;margin:10px 0}header h3{margin-top:5px}.mainSection 
             .en-details{width:100%;margin:1.2rem auto 0;}.mainSection .cer-name{text-align:center;font-size:20px;margin:1rem 0 0}
@@ -63,7 +63,7 @@
                     <p class="address2">Website: www. upmedicalcouncil.org, Email:upmedicalcouncil@upsmfac.org</p>
                     <div class="mainSection">
                         <div class="row">
-                            <p class="title1"><font style="color:rgb(74, 163, 226)" >Ref. No:</font> {{credentialSubject.refNo}}</p>
+                            <p class="title1"><font style="color:rgb(74, 163, 226)" >Ref. No:</font> {{credentialSubject.council}}/GOODSTANDING.{{credentialSubject.certificateNumber}}{{credentialSubject.passingYear}}</p>
                             <div class="top-logo"><img src="images/mclogoc.jpg" alt="upsmf logo images"></div>
                             <p class="title1"><font style="color:rgb(74, 163, 226)" >Date: </font>{{credentialSubject.courseDate}}</p>
                         </div>
