--- a/goodstanding_WC.html
+++ b/goodstanding_WC.html
@@ -54,7 +54,7 @@
                     <div class="s-division">
 						<div class="row1">
 								<p class="title1">Ref No </p>
-                                <P>: {{credentialSubject.refNo}}</P>
+                                <P>: {{credentialSubject.certificateNumber}}</P>
 						</div>
                         <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/dlogoc.jpg" alt="upsmf logo images"></div>
 						<div class="row2">
