--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -122,8 +122,8 @@
                         </div>
                         <div class="dateandno">
                             <div class="daterow">
-                                <h4>No: 4667</h4>
-                                <h4>Dated :{{credentialSubject.nurseRegDate}}</h4>
+                                <h4>No: {{credentialSubject.certificateNumber}}</h4>
+                                <h4>Dated :{{credentialSubject.date}}</h4>
                             </div>
                         </div>
                         <div class="para2">
