--- a/Foreign-certificate-upnc-WC.html
+++ b/Foreign-certificate-upnc-WC.html
@@ -60,10 +60,10 @@
                     	 <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/bglogo.png" alt="upsmf logo images"></div>
                     	 <div class="s-division">
                             <div class="row">
-                                    <p class="title1">Ref. No : {{credentialSubject.refNo}}</p>
+                                    <p class="title1">Ref. No : {{credentialSubject.certificateNumber}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">Date: {{credentialSubject.nurseRegDate}}</p>
+                                <p class="title2">Date: {{credentialSubject.date}}</p>
                             </div>
                             
                     </div>
