--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -123,7 +123,7 @@
                         <div class="dateandno">
                             <div class="daterow">
                                 <h4>No: {{credentialSubject.certificateNumber}}</h4>
-                                <h4>Dated :{{credentialSubject.date}}</h4>
+                                <h4>Dated :{{credentialSubject.nurseRegDate}}</h4>
                             </div>
                         </div>
                         <div class="para2">
