--- a/REISSUE-BDS.html
+++ b/REISSUE-BDS.html
@@ -102,7 +102,7 @@
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
-                                <p class="result">{{credentialSubject.passingMonth}}-{{credentialSubject.passingYear} </p>
+                                <p class="result">{{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}} </p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">College</p>
@@ -122,7 +122,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">This certificate shall remain inforce upto :-</p>
-                                <p class="result">{{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} To {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}}</p>
+                                <p class="result">{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} To {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Underwent rotatory Internship Training from</p>
