--- a/Matrimony-Name-Change.additional-WC.html
+++ b/Matrimony-Name-Change.additional-WC.html
@@ -20,8 +20,7 @@
         font-weight: 700;}.text-right{text-align:right}.mainSection .cer-type,.text-center,header h3,header
         p {text-align:end}.secondaryColor{color:#2020a7}.cc-container{position:relative;z-index:1}.bg-upsmf,
         footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;top:55%;width:60%;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
-        .en-certificate{width:653px;height:1090px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;
-            display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1.5;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem}
+        .en-certificate{width:653px;height:1090px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1.5;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem}
             p{font-size:.875rem}hr{border:none;background-color:rgba(0,0,0,.15);height:1px;margin:10px 0}header h3{margin-top:5px}.mainSection 
             .en-details{width:100%;margin:1.2rem auto 0}.mainSection .cer-name{text-align:center;font-size:20px;color:#ec1f07;margin:1rem 0 0}
             .law .act,.mainSection .cer-type{text-transform:uppercase;margin:0}.mainSection .cer-type{    font-size: 18px;color: blue;display: flex;align-items: center;justify-content: center;}
